Style Bug: White space between header and content

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     padding: 10px 0;
+    margin-bottom: 10px;
     color: var(--accent-dark-brown);
     font-size: var(--Header-Mobile-Font-Size);
     font-family: var(--Header-font-style);
